# rish.bounds_test

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: CODEOWNERS
.github/actions/setup-environment/: action.yml
.github/workflows/: ci_tests.yml
cmake/: appleclang-toolchain.cmake  beman.bounds_test-config.cmake  bootstrap_vcpkg.cmake  check_plat.cmake  msvc-toolchain.cmake
docs/: placeholder.md
examples/: CMakeLists.txt  cartesian_plane.cpp  placeholder.cpp
include/beman/bounds_test/: beman.bounds_test.cppm  bounds_test.hpp
include/beman/bounds_test/plat/: CMakeLists.txt  common.hpp
include/beman/bounds_test/plat/generic/beman/bounds_test/plat/: plat.hpp
include/beman/bounds_test/plat/gnu/beman/bounds_test/plat/: plat.hpp
include/beman/bounds_test/plat/msvc/beman/bounds_test/plat/: plat.hpp
tests/beman/bounds_test/: CMakeLists.txt  bounds_test.tests.cpp
